--- a/frontend/miniapp/pages/login/login.wxml
+++ b/frontend/miniapp/pages/login/login.wxml
@@ -1,3 +1,4 @@
+<view class="container" style="padding-top: {{statusBarHeight}}px;">
 <view class="card">
   <view class="section-title">账号登录</view>
   <view class="form-group">
@@ -40,4 +41,5 @@
   <button class="wechat-btn" open-type="getPhoneNumber" bindgetphonenumber="onGetPhoneNumber">
     <text>微信手机号一键登录</text>
   </button>
+</view>
 </view>
