--- a/frontend/miniapp/pages/login/login.wxss
+++ b/frontend/miniapp/pages/login/login.wxss
@@ -1,4 +1,15 @@
-.section-title {
+/* Pages background color */
+page {
+  background-color: #f7f9fc;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  padding: 0 40rpx;
+  /* Add extra padding on top of status bar for safety */
+  padding-top: 120rpx; 
+}
   font-size: 36rpx;
   font-weight: 600;
   margin-bottom: 40rpx;
@@ -75,6 +86,9 @@
   border-radius: 12rpx;
   height: 88rpx;
   line-height: 88rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .helper {
