--- a/frontend/miniapp/pages/login/login.wxml
+++ b/frontend/miniapp/pages/login/login.wxml
@@ -1,4 +1,4 @@
-<view class="container" style="padding-top: {{statusBarHeight}}px;">
+<view class="container" style="padding-top: calc({{statusBarHeight}}px + 100px);">
 <view class="card">
   <view class="section-title">账号登录</view>
   <view class="form-group">
