--- a/frontend/miniapp/pages/login/login.wxml
+++ b/frontend/miniapp/pages/login/login.wxml
@@ -1,15 +1,18 @@
-<view class="container" style="padding-top: calc({{statusBarHeight}}px + 100px);">
-<view class="card">
-  <view class="section-title">账号登录</view>
+<view class="container" style="padding-top: calc({{statusBarHeight}}px + 140px);">
+  <view class="logo-container">
+    <image class="logo" src="../../assets/logo.png" mode="aspectFill"></image>
+  </view>
+<view class="card login-card">
+  <view class="section-title" style="margin-top: 60rpx;">账号登录</view>
   <view class="form-group">
     <input class="input" type="number" placeholder="请输入手机号" maxlength="11" value="{{phone}}" bindinput="onPhoneInput" />
   </view>
       <view class="input-group">
-        <text class="label">工号</text>
+
         <view class="password-container">
           <input
             class="input password-input"
-            placeholder="请输入工号"
+            placeholder="初始密码为员工工号"
             placeholder-class="placeholder"
             password="{{!isPasswordVisible}}"
             bindinput="onPasswordInput"
@@ -27,8 +30,13 @@
       </view>
   <button class="btn" loading="{{loading}}" bindtap="onLogin">登录</button>
   <!--
-  <view class="helper">
-    <text bindtap="onGoRegister" class="link">还没有账号？立即注册</text>
+      <text class="label">用户名：</text>
+      <text>{{user ? (user.full_name || user.username || '未填写') : '加载中'}}</text>
+    </view>
+    <view class="profile-row">
+      <text class="label">手机号：</text>
+      <text>{{user ? user.phone : '--'}}</text>
+    <view class="line"></view>
   </view>
   -->
 
